<resources>
    <string name="app_name" translatable="false">MoneyCounter</string>
    <string name="drawable_folder" translatable="false">drawable</string>
    <string name="one" translatable="false">1</string>
    <string name="zero" translatable="false">0</string>
    <string name="default_icon" translatable="false">icon_add</string>
    <string name="UAH" translatable="false">UAH</string>
    <string name="PLN" translatable="false">PLN</string>
    <string name="USD" translatable="false">$</string>
<string name="channelId_with_sound" translatable="false">channelId_with_sound</string>
    <string name="channelId_without_sound" translatable="false">channelId_without_sound</string>
    <string name="btn_title_add" translatable="false">""</string>
    <string name="header_category_id" translatable="false">category id</string>
    <string name="header_name" translatable="false">name</string>
    <string name="header_money_type" translatable="false">money type</string>
    <string name="header_icon" translatable="false">icon</string>
    <string name="header_color" translatable="false">color</string>
    <string name="header_order" translatable="false">order</string>
    <string name="header_finance_id" translatable="false">finance id</string>
    <string name="header_date" translatable="false">date</string>
    <string name="header_amount" translatable="false">amount</string>
    <string name="accept">Підтвердити</string>
    <string name="name">Назва</string>
    <string name="next">Далі</string>
    <string name="skip">Пропустити</string>
    <string name="save">Зберегти</string>
    <string name="add">Додати</string>
    <string name="icon">Іконка</string>
    <string name="select_color">Вибрати колір</string>
    <string name="write_message">Напишіть повідомлення</string>
    <string name="hour">година</string>
    <string name="storage">Сховище</string>
    <string name="wait">Зачекайте..</string>
    <string name="already_independent">Ви вже незалежні</string>
    <string name="piggy_bank_empty">Скарбничка пуста</string>
    <string name="action_create">створити</string>
    <string name="action_change">змінити</string>
    <string name="action_remove">видалити</string>
    <string name="no_internet">Немає з\'єднання з інтернетом</string>
    <string name="last_update">Останнє оновлення</string>
    <string name="at">о</string>
    <string name="year">року</string>
    <string name="exit">Вийти?</string>
    <string name="protect_app_by_password">Захистити застосунок кодом для входу</string>
    <string name="change_password">Зміити код для входу</string>
    <string name="use_biometric">Використовувати біометричну авторизацію</string>
    <string name="no_income_finances">Джерела доходів не знайдені. Ви можете створити нові зайшовши в Меню / Доходи</string>
    <string name="no_costs_finances">Джерела витрат не знайдені. Ви можете створити нові зайшовши в Меню / Витрати</string>
    <string name="no_income_graph_data">Незабаром тут з\'явиться графік доходів</string>
    <string name="no_costs_graph_data">Незабаром тут з\'явиться графік витрат</string>
    <string name="question_to_exit">Всі незбережені зміни будуть втрачені</string>
    <string name="accept_exit">Вийти</string>
    <string name="refuse_exit">Залишитись</string>
    <string name="delete">Видалити?</string>
    <string name="question_to_delete">Дана категорія містить фінанси. Видалення її призведе до видалення всіх фінансів цієї категорії</string>
    <string name="accept_delete">Видалити</string>
    <string name="refuse_delete">Залишити</string>
    <string name="enter_password">Введіть код для швидкого доступу до застосунку</string>
    <string name="enter_previous_password">Введіть попередній код</string>
    <string name="invent_password">Вигадайте код</string>
    <string name="repeat_password">Підтвердіть код</string>
    <string name="fingerprint_disabled">Розблокування відбитком пальця відключено</string>
    <string name="fingerprint_enabled">Розблокування відбитком пальця включено</string>
    <string name="biometrics_not_found">Біометрія не знайдена</string>
    <string name="scan_to_enter">Відскануйте щоб ввійти</string>
    <string name="enter_code">Ввести код</string>
    <string name="enter_current_password">Введіть попередній код</string>
    <string name="try_again_later">Спробуйте пізніше</string>
    <string name="no_permission_to_access_files">Немає дозволу для доступу до файлів</string>
    <string name="csv_required">Файл повинен бути формату .csv</string>
    <string name="saved">Збережено!</string>
    <string name="notification_text">Не забудьте записати доходи та витрати</string>
    <string name="descriptionText">Не забудьте записати доходи та витрати</string>
    <string name="notification_name_with_sound">Нагадування зі звуком</string>
    <string name="notification_name_without_sound">Беззвучне нагадування</string>
    <string name="intro_title_mission">Місія</string>
    <string name="intro_title_costs">Витрати</string>
    <string name="intro_title_analytics">Аналітика</string>
    <string name="intro_title_independence">Розрахунок фінансової незалежності</string>
    <string name="intro_title_work_hour">Вартість роботи в годину</string>
    <string name="intro_title_budget">Ваш бюджет завжди буде з вами</string>
    <string name="intro_title_offline">Застосунок працює offline</string>
    <string name="intro_text_mission">Місія нашого застосунку навчити вас контролювати потік грошей та втримувати його в вашому гаманці</string>
    <string name="intro_text_costs">Записуйте всі ваші витрати відразу як ви їх зробили. Діліть їх по категоріям</string>
    <string name="intro_text_analytics">Графіки доходів та витрат підкажуть вам скільки ви витрачаєте кожного дня. Аналізуйте свій бюджет за кожною категорією</string>
    <string name="intro_text_independence">Розраховуйте виходячи з суми відкладень в скарбничку за останній місяць та відсотку доходу з цієї суми</string>
    <string name="intro_text_work_hour">Розраховується виходячи з витрат за останній, показує мінімальну необхідну вартість години роботи</string>
    <string name="intro_text_budget">В застосунку можна зробити експорт та імпорт своїх даних при зміні девайса</string>
    <string name="intro_text_offline">Контролюйте фінанси, аналізуйте свій бюджет, заощаджуйте гроші, розраховуйте вартість своєї роботи - і все це оффлайн.</string>
    <string name="intro_policy_terms">
    \n<b>1.</b> Ідейні міркування вищого.
    \n<b>1.1.</b> Порядку, а також сформована структура організації вимагають визначення та уточнення форм розвитку.
    \n<b>1.2.</b> Завдання організації, особливо ж нова модель організаційної.
    \n\n<b>2.</b> Діяльності відіграє важливу роль у формуванні напрямків.
    \n\n<b>3.</b> Прогресивного розвитку.
    \n\n<b>4.</b> Міркування вищого порядку, а також консультація з широким активом грає
    \n\n<b>5.</b> Важливу роль у формуванні систем масової участі.
    \n\n<b>6.</b> Відповідний умов активізації.
    \n\n<b>7.</b> Міркування вищого порядку, а також консультація з широким активом грає
    </string>
    <string name="intro_radio_policy_terms">Я ПРИЙМАЮ УМОВИ ПОЛІТИКИ КОНФІДЕНЦІЙНОСТІ</string>
    <string name="default_locale">ua</string>
    <string name="intro_accept_policy_terms">Почати</string>
    <string name="home_text_income">Доходи</string>
    <string name="home_text_costs">Витрати</string>
    <string name="financial_places">Місця збереження коштів</string>
    <string name="add_financial_places">Додати місце збереження коштів</string>
    <string name="home_text_analytics">Аналітика</string>
    <string name="home_text_calculate">Конвертер валют</string>
    <string name="home_text_currency">Курси валют</string>
    <string name="sidebar_text_settings">Налаштування</string>
    <string name="sidebar_text_notifications">Сповіщення</string>
    <string name="sidebar_text_sound_notifications">Звук сповіщеннь</string>
    <string name="sidebar_text_import_data">Імпортувати дані</string>
    <string name="sidebar_text_export_data">Експортувати дані</string>
    <string name="sidebar_text_renew_subscription">Продовжити підписку</string>
    <string name="sidebar_text_lock_settings">Налаштування блокування</string>
    <string name="sidebar_text_write_to_us">Напиши нам</string>
    <string name="sidebar_text_rate_app">Оціни застосунок</string>
    <string name="sidebar_text_share_app">Поділись застосунком</string>
    <string name="sidebar_text_info">Про застосунок</string>
    <string name="home_expression">Я знаю, не можна мати все відразу, тому я почну з невеликого - з грошей.</string>
    <string name="home_author_expression">Януш Васильковський</string>
    <string name="no_categories">Категорії не знайдені. Ви можете створити нові вийшовши з режиму редактування</string>
    <string name="no_financial_places">Місця збереження коштів не знайдені. Ви можете створити нові вийшовши з режиму редактування</string>
    <string name="category_title_salary">Заробітна плата</string>
    <string name="category_title_sponsor">Спонсор</string>
    <string name="category_title_rollback">Вхятка, відкат</string>
    <string name="category_title_gift">Подарунки</string>
    <string name="category_title_dividend">Дивіденди</string>
    <string name="category_title_investments">Інвестиції</string>
    <string name="category_title_business">Бізнес</string>
    <string name="category_title_property">Нерухомість</string>
    <string name="category_title_insurance">Страхування</string>
    <string name="category_title_stock">Цінні папери, акції</string>
    <string name="category_title_loans">Кредити, позики</string>
    <string name="category_title_unexpected">Непередбачуваний</string>
    <string name="category_title_state_benefits">Держ. допомога</string>
    <string name="category_title_food">Харчування</string>
    <string name="category_title_utility_services">Комунальні послуги</string>
    <string name="category_title_communication">Зв\'язок, інтернет, ТБ</string>
    <string name="category_title_clothes">Одяг, взуття</string>
    <string name="category_title_transport">Транспорт</string>
    <string name="category_title_games">Розваги</string>
    <string name="category_title_relax">Відпочинок</string>
    <string name="category_title_education">Навчання</string>
    <string name="category_title_kids">Діти</string>
    <string name="category_title_parents">Батьки</string>
    <string name="category_title_love">Друга половинка</string>
    <string name="category_title_personal_care">Догляд за собою</string>
    <string name="category_title_home_care">Догляд за домом</string>
    <string name="category_title_sport">Здоров\'я, спорт</string>
    <string name="category_title_pet">Домашній улюбленець</string>
    <string name="category_title_hobby">Хобі</string>
    <string name="category_title_repair">Ремонт, меблі, техніка</string>
    <string name="title_general">Загальне</string>
    <string name="title_income">Доходи</string>
    <string name="title_salary">Зарплата</string>
    <string name="title_main">Основна</string>
    <string name="title_costs">Витрати</string>
    <string name="title_business">Бізнес</string>
    <string name="title_create_category">Додати категорію</string>
    <string name="title_choose_icon">Виберіть іконку</string>
    <string name="title_analytics">Аналітика</string>
    <string name="title_piggy_bank">Скарбничка</string>
    <string name="title_calculate_independence">Розрахунок фінансової незалежності</string>
    <string name="write_to_us_text">
            Напиши нам, якщо у вас є пропозиції чи коментарі стосовно нашого застосунку і ми обов\'язково відповімо.
        </string>
</resources>