<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E97D9">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_wave_view">

    </LinearLayout>

    <ImageButton
        android:id="@+id/home_menu_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_menu" />

    <com.ssynhtn.waveview.WaveView
        android:id="@+id/home_wave_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/pieChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_home_expression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/finance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_regular"
        tools:text="Доход"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/finance_percent_view"
        app:layout_constraintEnd_toEndOf="@+id/pieChart"
        app:layout_constraintStart_toStartOf="@+id/pieChart" />

    <TextView
        android:id="@+id/finance_percent_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        tools:text="66.9%"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/pieChart"
        app:layout_constraintEnd_toEndOf="@+id/pieChart"
        app:layout_constraintStart_toStartOf="@+id/pieChart"
        app:layout_constraintTop_toTopOf="@+id/pieChart" />

    <TextView
        android:id="@+id/finance_sum_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_regular"
        tools:text="5480.00"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/pieChart"
        app:layout_constraintStart_toStartOf="@+id/pieChart"
        app:layout_constraintTop_toBottomOf="@+id/finance_percent_view" />

    <TextView
        android:id="@+id/tv_home_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/home_expression"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_home_author_expression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_home_author_expression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/home_author_expression"
        android:textColor="@color/dark_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_home_costs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.moneycounter.ui.custom.RoundTextButton
        android:id="@+id/button_home_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        app:btn_color="@color/yellow"
        app:btn_icon="home_icon_income"
        app:layout_constraintBottom_toTopOf="@+id/button_home_development"
        app:layout_constraintStart_toStartOf="parent"
        app:text_title="@string/home_text_income" />

    <com.example.moneycounter.ui.custom.RoundTextButton
        android:id="@+id/button_home_costs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:btn_color="@color/purple"
        app:btn_icon="home_icon_costs"
        app:layout_constraintBottom_toTopOf="@+id/button_home_deposit"
        app:layout_constraintEnd_toStartOf="@+id/button_home_analytics"
        app:layout_constraintStart_toEndOf="@+id/button_home_income"
        app:text_title="@string/home_text_costs" />

    <com.example.moneycounter.ui.custom.RoundTextButton
        android:id="@+id/button_home_analytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:btn_color="@color/red"
        app:btn_icon="home_icon_analytics"
        app:layout_constraintBottom_toTopOf="@+id/button_home_deposit"
        app:layout_constraintEnd_toEndOf="parent"
        app:text_title="@string/home_text_analytics" />

    <com.example.moneycounter.ui.custom.RoundTextButton
        android:id="@+id/button_home_development"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:btn_color="@color/green"
        app:btn_icon="home_icon_development"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_home_costs"
        app:layout_constraintStart_toEndOf="@+id/button_home_income"
        app:text_title="@string/home_text_development" />

    <com.example.moneycounter.ui.custom.RoundTextButton
        android:id="@+id/button_home_deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:btn_color="@color/light_blue"
        app:btn_icon="home_icon_deposit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_home_analytics"
        app:layout_constraintStart_toEndOf="@+id/button_home_costs"
        app:text_title="@string/home_text_deposit" />



</androidx.constraintlayout.widget.ConstraintLayout>